# WinEnhanceMouse

./: README.md  pyproject.toml
config/: default_config.json
winenhancemouse/: __init__.py  app.py  config.py  engine.py
winenhancemouse/actions/: __init__.py  registry.py
winenhancemouse/ai/: __init__.py  assistant.py
winenhancemouse/gui/: ai_window.py  menu_overlay.py  settings_window.py
